infrastructure/k8s/main/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/instance: main
    app.kubernetes.io/name: main
  name: main
