infrastructure/k8s/main/token-mediating-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: token-mediating-backend
  labels:
    app: token-mediating-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: token-mediating-backend
  template:
    metadata:
      labels:
        app: token-mediating-backend
    spec:
      containers:
      - name: token-mediating-backend
        image: 162173573602.dkr.ecr.ap-northeast-1.amazonaws.com/token-mediating-backend
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        - containerPort: 5005
---
apiVersion: v1
kind: Service
metadata:
  name: token-mediating-backend
spec:
  selector:
    app: token-mediating-backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: token-mediating-backend
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/x-forwarded-prefix: "/o"
spec:
  rules:
  - host: santelos.com
    http:
      paths:
      - path: /o(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: token-mediating-backend
            port:
              number: 80
