infrastructure/k8s/main/web-bff.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-bff
  labels:
    app: web-bff
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-bff
  template:
    metadata:
      labels:
        app: web-bff
    spec:
      containers:
      - name: web-bff
        image: 162173573602.dkr.ecr.ap-northeast-1.amazonaws.com/web-bff
        ports:
        - containerPort: 8080
        - containerPort: 5005
---
apiVersion: v1
kind: Service
metadata:
  name: web-bff
spec:
  selector:
    app: web-bff
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-bff
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/x-forwarded-prefix: "/web-bff"
spec:
  rules:
  - host: santelos.com
    http:
      paths:
      - path: /web-bff(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: web-bff
            port:
              number: 80
